...
        android:text="@string/instructions"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/instruction_list_view"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_below="@id/instruction_header"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:divider="@null"
...
                android:layout_marginEnd="15dp"
                android:onClick="resetClicked"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_stop_timer"
                android:text="@string/start"
                android:background="@drawable/round_button"
                android:textColor="@color/dark_green"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:onClick="startStopClicked"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/finish_cooking_button"
                android:text="@string/finish"
                android:background="@drawable/round_button"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
...
