...
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_below="@id/recipe_card_layout"
        android:layout_marginTop="77dp"
        android:background="@color/white"
        android:divider="@null" />

    <Spinner
        android:id="@+id/serving_num"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_below="@id/recipe_card_layout"
        android:layout_alignEnd="@+id/text_ingredients"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
...

        android:background="@color/header_footer_background"
        android:gravity="center"
        android:theme="@style/spinnerTheme" />

    <Button
        android:id="@+id/start_cooking"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ingredients_list"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
...
