<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    tools:context=".presentation.SuggestRecipe">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="0dp"
        android:text="Can't decide what to cook? Let us help." />
    <TextView
        android:id="@+id/textView5"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="Select what matters to you most today." />

    <Button
        android:id="@+id/challengeButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="A challenge "
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="25dp"
        android:theme="@style/buttonWhiteBack"/>

    <Button
        android:id="@+id/easeButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Ease"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:theme="@style/buttonWhiteBack"/>

    <Button
        android:id="@+id/savingTimeButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Saving time"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:theme="@style/buttonWhiteBack"/>

    <Button
        android:id="@+id/tasteButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Taste"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:theme="@style/buttonWhiteBack"/>

    <Button
        android:id="@+id/supriseMeButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Surprise me"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="150dp"/>


</LinearLayout>